--- a/WinAppProyectoG1/WinAppProyectoG1.csproj
+++ b/WinAppProyectoG1/WinAppProyectoG1.csproj
@@ -76,6 +76,12 @@
     <Compile Include="FrmIngresarUsuario.Designer.cs">
       <DependentUpon>FrmIngresarUsuario.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmRegistrar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmRegistrar.Designer.cs">
+      <DependentUpon>FrmRegistrar.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -92,6 +98,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmIngresarUsuario.resx">
       <DependentUpon>FrmIngresarUsuario.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmRegistrar.resx">
+      <DependentUpon>FrmRegistrar.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
