Creacion Clase Video

--- a/WinAppProyectoG1/WinAppProyectoG1.csproj
+++ b/WinAppProyectoG1/WinAppProyectoG1.csproj
@@ -85,6 +85,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Video.cs" />
     <EmbeddedResource Include="FrmBienvenida.resx">
       <DependentUpon>FrmBienvenida.cs</DependentUpon>
     </EmbeddedResource>
